--- a/FolderVersioningHardening/Releasefile.yaml
+++ b/FolderVersioningHardening/Releasefile.yaml
@@ -1,6 +1,6 @@
 # Exported from:        http://Kirans-MacBook-Pro.local:5516/
 # Release version:      24.1.0
-# Date created:         Wed Jul 23 11:15:00 IST 2025
+# Date created:         Wed Jul 23 12:45:26 IST 2025
 
 ---
 apiVersion: xl-release/v1
@@ -10,4 +10,5 @@ spec:
   - Notifications.yaml
   - Template_Test_Template_Folder.yaml
   - Template_Test_Template_Global.yaml
+  - Template_Test_Template_Template.yaml
   - Variables.yaml
