--- a/FolderVersioningHardening/Template_Test_Template_Global.yaml
+++ b/FolderVersioningHardening/Template_Test_Template_Global.yaml
@@ -1,6 +1,6 @@
 # Exported from:        http://Kirans-MacBook-Pro.local:5516/
 # Release version:      24.1.0
-# Date created:         Wed Jul 23 11:15:00 IST 2025
+# Date created:         Wed Jul 23 12:45:26 IST 2025
 
 ---
 apiVersion: xl-release/v1
@@ -11,6 +11,7 @@ metadata:
 spec:
 - template: Test_Template_Global
   scheduledStartDate: 2025-07-23T09:00:00+05:30
+  dueDate: 2025-07-23T10:00:00+05:30
   phases:
   - phase: New Phase
     tasks:
