--- a/D40775/Template_test_template.yaml
+++ b/D40775/Template_test_template.yaml
@@ -1,6 +1,6 @@
 # Exported from:        http://Kirans-MacBook-Pro.local:5516/
 # Release version:      24.1.0
-# Date created:         Tue Sep 16 14:36:18 IST 2025
+# Date created:         Tue Sep 16 14:37:58 IST 2025
 
 ---
 apiVersion: xl-release/v1
@@ -17,6 +17,6 @@ spec:
     - name: T1
       type: xlrelease.CreateReleaseTask
       newReleaseTitle: R1
-      template: ./Outside_Temp/Test_Template_T1
+      template: Outside_Temp/Test_Template_T1
   riskProfile: Default risk profile
   author: admin
