--- a/D41218/Releasefile.yaml
+++ b/D41218/Releasefile.yaml
@@ -1,6 +1,6 @@
 # Exported from:        http://Kirans-MacBook-Pro.local:5516/
 # Release version:      24.1.0
-# Date created:         Wed Sep 17 11:19:55 IST 2025
+# Date created:         Wed Sep 17 11:20:22 IST 2025
 
 ---
 apiVersion: xl-release/v1
@@ -12,3 +12,4 @@ spec:
   - Template_t2.yaml
   - Template_t3.yaml
   - Template_t4.yaml
+  - Template_t5.yaml
