--- a/D41054/Template_test_template.yaml
+++ b/D41054/Template_test_template.yaml
@@ -1,6 +1,6 @@
 # Exported from:        http://Kirans-MacBook-Pro.local:5516/
 # Release version:      24.1.0
-# Date created:         Wed Sep 17 16:03:25 IST 2025
+# Date created:         Wed Sep 17 16:04:50 IST 2025
 
 ---
 apiVersion: xl-release/v1
@@ -15,7 +15,11 @@ spec:
   - phase: New Phase
     tasks:
     - name: T1
-      type: onboardplugin.OnboardPhase
+      type: xlrelease.UnknownType
       owner: admin
+      flagStatus: ATTENTION_NEEDED
+      flagComment: Task 'T1' in Phase 'New Phase' has been replaced by an unknown
+        task. The task of type 'onboardplugin.OnboardPhase' could not be found because
+        of a missing plugin.
   riskProfile: Default risk profile
   author: admin
