--- a/TestGitVersioning1/Releasefile.yaml
+++ b/TestGitVersioning1/Releasefile.yaml
@@ -1,6 +1,6 @@
 # Exported from:        http://Kirans-MacBook-Pro.local:5516/
 # Release version:      24.1.0
-# Date created:         Fri Sep 26 14:45:51 IST 2025
+# Date created:         Fri Sep 26 14:47:43 IST 2025
 
 ---
 apiVersion: xl-release/v1
@@ -8,3 +8,4 @@ kind: Import
 spec:
   imports:
   - Notifications.yaml
+  - Template_template1.yaml
