--- a/TestGitVersioning1/Releasefile.yaml
+++ b/TestGitVersioning1/Releasefile.yaml
@@ -1,6 +1,6 @@
 # Exported from:        http://Kirans-MacBook-Pro.local:5516/
 # Release version:      24.1.0
-# Date created:         Fri Sep 26 14:47:43 IST 2025
+# Date created:         Fri Sep 26 14:50:04 IST 2025
 
 ---
 apiVersion: xl-release/v1
@@ -9,3 +9,4 @@ spec:
   imports:
   - Notifications.yaml
   - Template_template1.yaml
+  - Template_template2.yaml
