--- a/TestGitVersioning1/Templates.yaml
+++ b/TestGitVersioning1/Templates.yaml
@@ -1,6 +1,6 @@
 # Exported from:        http://Kirans-MacBook-Pro.local:5516/
 # Release version:      24.1.0
-# Date created:         Fri Sep 26 14:50:04 IST 2025
+# Date created:         Fri Sep 26 14:51:20 IST 2025
 
 ---
 apiVersion: xl-release/v1
@@ -9,6 +9,16 @@ metadata:
   path: /
   home: Test-Git-Versioning
 spec:
+- template: Template1
+  scheduledStartDate: 2025-09-26T09:00:00+05:30
+  dueDate: 2025-09-26T10:00:00+05:30
+  phases:
+  - phase: New Phase
+    tasks:
+    - name: New task
+      type: xlrelease.Task
+  riskProfile: Default risk profile
+  author: admin
 - template: Template2
   scheduledStartDate: 2025-09-26T09:00:00+05:30
   phases:
